# devops-study-app

./: .pre-commit-config.yaml  docker-compose.yaml  mise.toml
.github/workflows/: backend-tests.yaml  frontend-tests.yaml
src/backend/: Dockerfile  pyproject.toml
src/backend/src/data/: sessions.csv
src/frontend/: pyproject.toml
