[project]
name = "study-tracker-frontend"
version = "0.0.0"
description = "Frontend for DevOps Study Tracker application"
readme = "README.md"
authors = [{ name = "hansjlachmann", email = "hansjlachmann@hotmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "logging>=0.4.9.6",
    "requests>=2.32.5",
]

[project.scripts]
study-tracker-frontend = "frontend.main:main"


[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
